--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,16 @@
 * {
     box-sizing: border-box;
 }
-.body {
-    /* Old font 
+
+body{
+    /* Testing addition of new font 
     font-family: '-apple-system', 
         BlinkMacSystemFont, sans-serif; */
-
-    /* New font family */
+    
     font-family: ‘SF Pro Display’,
         sans-serif;
+        
     margin:40px auto;
-    max-width:650px;
     line-height:1;
     font-size:25px;
     color:rgb(60, 60, 60);
@@ -18,19 +18,45 @@
     padding:0
     10px
     }
-    h1,h2,h3{ line-height:1.5 }
-    footer{
-        font-size:12px;
-        padding: 2px;
-        text-align: center;
-        bottom: 0;
-        position: fixed;
-        width: 100%;
+
+h1,h2,h3{
+    line-height:1.5
     }
+
+footer{
+    font-size:12px;
+    padding: 2px;
+    text-align: center;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+    }   
+
+input::file-selector-button, input[type=submit], input[type=file]{
+    background-color: #FAF9F6;
+    border-bottom: 5px solid rgb(60, 60, 60);
+    color: rgb(60, 60, 60);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    transition-duration: 0.4s;
+    cursor: pointer;
+    }
+
+input[type=file]{
+    border:none;
+    }
+
+input[type=submit]:hover{
+    background-color: #689897b3;
+    }
+
+input::file-selector-button:hover{
+    background-color: #689897b3;
+    }
+
 .container {
     max-width: 650px;
     width: 100%;
     padding: 30px;
     border-radius: 20px;
     box-shadow: rgba(149, 157, 165, 0.2) 0 px 8px 24px;
-}
+    }
