--- a/styles.css
+++ b/styles.css
@@ -25,18 +25,17 @@ h1,h2,h3{
 
 footer{
     font-size:12px;
-    padding: 2px;
+    padding: 5px;
     text-align: center;
     bottom: 0;
-    position: fixed;
+    position: relative;
     width: 100%;
     }   
 
 input::file-selector-button, input[type=submit], input[type=file]{
     background-color: #FAF9F6;
-    border-bottom: 5px solid rgb(60, 60, 60);
     color: rgb(60, 60, 60);
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 20px -10px rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     transition-duration: 0.4s;
     cursor: pointer;
     }
@@ -54,9 +53,8 @@ input::file-selector-button:hover{
     }
 
 .container {
-    max-width: 650px;
     width: 100%;
-    padding: 30px;
-    border-radius: 20px;
+    padding: 10px;
+    border-radius: 10px;
     box-shadow: rgba(149, 157, 165, 0.2) 0 px 8px 24px;
     }
