--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,34 @@
-<<<<<<< HEAD
-=======
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: 'SF Pro Display', sans-serif
 }
 
 body{
-    /* Testing addition of new font 
-    font-family: '-apple-system', 
-        BlinkMacSystemFont, sans-serif; */
-    
     font-family: ‘SF Pro Display’,
-        sans-serif;
-        
+        sans-serif;   
     margin:40px auto;
     line-height:1;
     font-size:25px;
     color:rgb(60, 60, 60);
     background-color:#FAF9F6;
-    padding:0
-    10px
+    padding:0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    flex-direction: column;
     }
 
-h1,h2,h3{
+h1,h2{
     line-height:1.5
     }
+
+h3 {
+    margin-bottom: 20px;
+    font-weight: 500;
+    }    
 
 footer{
     font-size:12px;
@@ -55,9 +60,39 @@ input::file-selector-button:hover{
     }
 
 .container {
+    max-width: 450px;
     width: 100%;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0 px 8px 24px;
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
->>>>>>> ac1d72cbaafc4b10008d15b9e9d01329af7347a7
+
+.drag-area {
+    border-radius: 15px;
+    height: 175px;
+    border: 3px dashed #e0eafc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 10px auto;
+    }
+
+.drag-area .icon {
+    font-size: 45px;
+    }
+
+.drag-area .header {
+    font-size: 17px;
+    font-weight: 400;
+    }
+ 
+.drag-area .button {
+    font-weight: 500;
+    color: #1683ff;
+    cursor: pointer;
+    }    
+
+.drag-area.active {
+    border: 2px solid #e0eafc;
+    }    
