--- a/styles.css
+++ b/styles.css
@@ -104,9 +104,13 @@ input::file-selector-button:hover{
     }    
 
 a{
-    color: #1683ff;
+    font-weight: 600;
+    background-image: linear-gradient(90deg, rgb(43, 138, 255), rgb(60, 32, 170), rgb(206, 28, 206));
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    /* color: #1683ff; */
     text-decoration: none;
-    transition-duration: 0.4s;
 
 }
 
