--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,10 @@ h1,h2,h3{
     line-height:1.5
     }
 
+p{
+    font-size: 20px;
+}
+
 h3.smaller {
     margin-bottom: 20px;
     font-size: 20px;
@@ -103,7 +107,7 @@ input::file-selector-button:hover{
     border: 2px solid #e0eafc;
     }    
 
-a{
+a {
     font-weight: 600;
     background-image: linear-gradient(90deg, rgb(43, 138, 255), rgb(60, 32, 170), rgb(206, 28, 206));
     -webkit-background-clip: text;
